assets/css/style.css
/* ... */
.icon.dribbble:hover path {
  fill: #EA4C89; }

.icon.twitter:hover path {
  fill: #1DA1F2; }

.icon.instagram:hover path {
  fill: #EF4859; }

#loading {
  background-color: #fff;
  height: 100%;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1000000; }

.post-nav {
  background-color: #383434;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 50px;
  padding: 3px 0;
  position: fixed;
  top: 0;
  white-space: nowrap;
  width: 100%;
  z-index: 1500; }
  .post-nav * {
    display: inline-block; }
  .post-nav a {
    height: 50px;
    line-height: 50px;
    text-decoration: none; }
  .post-nav h4 {
    font-size: 13px;
    margin: 0; }
  .post-nav .page-title {
    padding-right: 70px;
    line-height: 50px;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1; }
  .post-nav .prev, .post-nav .next {
    border-left: 1px solid #676060;
    min-width: 50px;
    width: 50px; }
    .post-nav .prev svg, .post-nav .next svg {
      height: 9.8px;
      width: 9.8px; }
  .post-nav .page-title {
    overflow: hidden;
    text-overflow: ellipsis; }
  .post-nav .post-nav__home {
    box-sizing: border-box;
    padding: 0 21px; }
    .post-nav .post-nav__home h4 {
      margin-left: 6.7px;
      visibility: hidden; }
    .post-nav .post-nav__home:hover h4 {
      visibility: visible; }
    .post-nav .post-nav__home svg {
      height: 20.4px;
      position: relative;
      top: 3px;
      width: 19px; }

@media all and (max-width: 479.9px) {
  .home-wrap,
  .error-404-wrap {
    padding: 0 10px 20px; }

  .desktop {
    display: none !important; }

  .about p {
    padding-top: 2.5rem; }
    .about p:last-child {
      padding-bottom: 2.5rem; }

  article {
    background-color: black; }

  article p {
    font-size: 16px;
    line-height: 22px;
    margin: 0 auto;
    padding: .7rem 40px; }

  div.slide__content p:last-child {
    padding-bottom: 0px; }

  .copyright {
    margin-bottom: 3.5rem; }
    .copyright .mobile {
      opacity: .25; }

  figcaption {
    font-size: 13px;
    line-height: 18px;
    color: #fff; }
    figcaption:not(.bg) {
      opacity: .5; }

  header svg {
    height: 34px;
    width: 34px; }

  html {
    height: 100%; }

  .id {
    margin: 0 auto; }

  .grid {
    margin-bottom: 81px; }

  .grid__item {
    margin-bottom: 10px;
    overflow: hidden;
    width: 100%; }
    .grid__item img {
      display: block;
      width: 100%; }

  .post-nav .page-title {
    padding-right: 0px;
    margin: 0 9px;
    text-align: left; }
  .post-nav .post-nav__home {
    width: 50px; }

  .slick-dots {
    bottom: 15px;
    margin: 0 auto;
    opacity: .5;
    padding: 12.5px 0;
    position: absolute;
    text-align: center;
    line-height: 5px;
    list-style: none;
    width: 100%; }
    .slick-dots li {
      cursor: pointer;
      display: inline-block;
      margin-left: 10px; }
      .slick-dots li button {
        background: transparent;
        border: 2px solid white;
        border-radius: 20px;
        height: 7px;
        outline: none;
        overflow: hidden;
        padding: 0;
        color: transparent;
        width: 7px; }
        .slick-dots li button:hover, .slick-dots li button:focus {
          outline: none; }
      .slick-dots li:first-of-type {
        margin-left: 0; }
    .slick-dots .slick-active button {
      background-color: white; }

  .slick-dots--dark li button {
    border-color: #4d4545; }
  .slick-dots--dark .slick-active button {
    background-color: #4d4545; }

  .slide {
    background-color: black;
    color: white;
    font-size: 20px;
    line-height: 26px;
    height: 100%;
    width: 100%; }
    .slide:focus {
      outline: none; }
    .slide a,
    .slide figcaption a,
    .slide figcaption a:visited {
      color: white; }
    .slide .slide__content {
      display: -webkit-box;
      display: -moz-box;
      display: -ms-flexbox;
      display: -webkit-flex;
      display: flex;
      -webkit-align-items: center;
      align-items: center;
      -webkit-flex-flow: column;
      flex-flow: column;
      -webkit-justify-content: center;
      justify-content: center;
      box-sizing: border-box;
      overflow: hidden;
      padding: 17.5px 11px 35px;
      position: relative;
      height: 100%;
      width: 100%; }
      .slide .slide__content img {
        margin-bottom: 13px;
        max-width: 100%; }
      .slide .slide__content .full-height {
        height: calc(100vh - 54px);
        max-width: none;
        position: absolute;
        top: 0px; }
      .slide .slide__content .bg, .slide .slide__content .bg-dark {
        box-sizing: border-box;
        position: absolute;
        bottom: 0;
        left: 0;
        padding: 55px 40px;
        max-width: 100%;
        width: 100%; }
      .slide .slide__content .bg {
        background: -webkit-linear-gradient(transparent, rgba(1, 0, 0, 0) 10%, rgba(2, 0, 0, 0.5));
        background: linear-gradient(transparent, rgba(1, 0, 0, 0) 10%, rgba(2, 0, 0, 0.5)); }
      .slide .slide__content .bg-dark {
        color: #4d4545;
        opacity: 1; }
        .slide .slide__content .bg-dark a, .slide .slide__content .bg-dark a:visited {
          color: #4d4545; }
      .slide .slide__content:focus {
        outline: none; }

  .tooltip, .quote-wrap {
    display: none; } }
/* ... */

